[package]
name = "rzfs_lib"
version = "0.0.0"
edition = "2021"
categories = ["filesystem", "no-std", "no-std::no-alloc"]
description = "Rust library to parse ZFS data structures."
license = "GPL-2.0 OR MIT"
homepage = "https://github.com/cybojanek/rzfs"

[lib]
name = "zfs"

[features]
default = ["std"]
std = []

[dependencies]
