# SPDX-License-Identifier: GPL-2.0 OR MIT

[package]
name = "rzfs_lib"
version = "0.0.0"
edition = "2021"
categories = ["filesystem", "no-std", "no-std::no-alloc"]
description = "Rust library to parse ZFS data structures."
license = "GPL-2.0 OR MIT"
homepage = "https://github.com/cybojanek/rzfs"

[lib]
name = "zfs"

[features]
default = ["std", "fletcher2-accel", "fletcher4-accel", "sha256-accel"]
std = []

fletcher2-accel = ["fletcher2-sse2", "fletcher2-ssse3", "fletcher2-avx2"]
fletcher2-sse2 = []
fletcher2-ssse3 = []
fletcher2-avx2 = []
fletcher2-avx512f = []
fletcher2-avx512bw = []

fletcher4-accel = ["fletcher4-sse2", "fletcher4-ssse3", "fletcher4-avx2"]
fletcher4-sse2 = []
fletcher4-ssse3 = []
fletcher4-avx2 = []
fletcher4-avx512f = []
fletcher4-avx512bw = []

sha256-accel = ["sha256-bmi", "sha256-ssse3"]
sha256-bmi = []
sha256-ssse3 = []

[dependencies]
